desktop-themes/BlackMATE/gtk-3.0/mate-applications.css
/* ... */
/****************
 * Mate-Panel   *
 ****************/


/* let's started */
/* the panel bar itself */

.mate-panel-menu-bar {
    background-color: @theme_bg_color;
    background-image: none;
    /* normal panel */
    color: @theme_fg_color;
    /* transparent panel light desktop background*/
/*    color: @theme_selected_fg_color; */
    text-shadow: none;
}

/* workaround to avoid unwanted black frames if switching compositor on/off */
.mate-panel-menu-bar .window-frame.csd.popup {
    box-shadow: none;
}


.mate-panel-menu-bar menubar,
.mate-panel-menu-bar menubar menuitem,
.mate-panel-menu-bar togglebutton {
    border-image: none;
    border-color: transparent;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
}

/* panel grip */
.mate-panel-menu-bar.background {
    border-radius: 3px;
/* enable for making borders visible */
/*    box-shadow: inset  0px  1px shade (@theme_selected_bg_color, 1.3),
                inset  1px  0px shade (@theme_selected_bg_color, 1.3),
                inset -1px  0px shade (@theme_selected_bg_color, 1.3),
                inset  0px -1px shade (@theme_selected_bg_color, 1.3); */
}

/* hide buttons */
.mate-panel-menu-bar button {
    background: transparent;
    border-image: none;
    border-radius: 3px;
    border-width: 0px;
    padding: 0px;
    box-shadow: none;
}

.mate-panel-menu-bar button:hover {
    border-style: solid;
    border-width: 0px;
    border-color: shade(@button_border, 1.1);
    background-image: linear-gradient(to bottom,
                                      shade(@button_gradient_color_a, 1.5),
                                      shade(@button_gradient_color_a, 0.7) 39%,
                                      @theme_bg_color 40%,
                                      shade(@less_dark_color, 0.4));
}

.mate-panel-menu-bar button:hover:active {
    border-style: solid;
    border-width: 0px;
    background-image: linear-gradient(to bottom,
                                      shade(@button_gradient_color_b, 0.7),
                                      @theme_bg_color 50%,
                                      shade(@button_gradient_color_a, 1.5));
}

/*sliders now need a background*/

.mate-panel-applet-slider frame{
	background-color:@theme_bg_color;
}

/*
MatePanelApplet {
    border-width: 0;
}

MatePanelAppletFrameDBus PanelSeparator,
PanelSeparator {
    border-width: 0;
    background-image: -gtk-gradient (linear, left top, left bottom,
                                     from (shade (@theme_bg_color, 0.96)),
                                     to (shade (@theme_bg_color, 1.05)));
    color: shade (@theme_fg_color, 0.45);
    text-shadow: none;
}
*/
/* dictionary applet */
GdictApplet .entry,
GdictApplet .entry:focus {
    border-style: none;
    padding: 1px 4px 5px 4px;
    box-shadow: inset  0px  1px shade (@theme_selected_bg_color, 1.3),
                inset  1px  0px shade (@theme_selected_bg_color, 1.3),
                inset -1px  0px shade (@theme_selected_bg_color, 1.3),
                inset  0px -1px shade (@theme_selected_bg_color, 1.3);
}

/* the grid left from wnckpager and wncktasklist */
MatePanelAppletFrameDBus {
    background-image: -gtk-scaled(url("assets/panel-grid.svg"));
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: left;
}

/* set normal menubar button */
.mate-panel-menu-bar menuitem {
    transition: all 300ms ease-out;
}

/* set selected menubar button */
.mate-panel-menu-bar menuitem:hover {
}

/* set selected menubar menuitem */
.mate-panel-menu-bar menu menuitem:checked:hover,
.mate-panel-menu-bar menu menuitem:active:hover,
.mate-panel-menu-bar menu menuitem:hover {
}

/* Mate menu button normal */
/* makes the arrow visible, nothing more works */
.mate-panel-menu-bar menu menuitem button {
    background-image: none;
    background-color: transparent;
    color: shade (@menu_fg_color, 1.00);
}


/* desktop-applet, clockapplet, drivemount, character-map,
dictionary */
.mate-panel-menu-bar .button,
.mate-panel-menu-bar .button.flat {
    transition: all 400ms ease-out;
    border-radius: 1px;
    padding: 2px;
    border-radius: 3px;
    border-width: 1px;
    border-style: solid;
    text-shadow: none;
    /* normal panel */
    color: @theme_fg_color;
    /* transparent panel light desktop background*/
/*  color: @theme_selected_fg_color; */
    background-image: none;
}

.mate-panel-menu-bar .button:checked:hover,
.mate-panel-menu-bar .button:checked,
.mate-panel-menu-bar .button:active:hover,
.mate-panel-menu-bar .button:active {
    border-radius: 3px;
    color: @theme_fg_color;
    border-style: solid;
    background-image: linear-gradient(to bottom,
                                      shade(@button_gradient_color_b, 0.7),
                                      @theme_bg_color 50%,
                                      shade(@button_gradient_color_a, 1.5));
}

.mate-panel-menu-bar .button:hover,
.mate-panel-menu-bar .button.flat:hover {
    border-radius: 3px;
    border-image: none;
    border-style: solid;
    border-color: shade(@button_border, 1.1);
    background-image: -gtk-gradient (radial,
                      0.5 -2.0, 2.0,
                      0.5 -2.0, 3.0,
                      from (shade(@button_gradient_color_a, 1.5)),
                      color-stop (0.42, shade(@button_gradient_color_a, 0.7)),
                      color-stop (0.43, @theme_bg_color),
                      to (shade(@button_gradient_color_b, 0.7)));
}
/* ... */

